tytul egezekucyjny swiadectwo

--- a/kadry/src/main/webapp/umowa/index.xhtml
+++ b/kadry/src/main/webapp/umowa/index.xhtml
@@ -45,7 +45,7 @@
                                             <ui:include src="sub/dane_skladnikwynagrodzenia.xhtml"/>
                                             <ui:include src="sub/dane_zmiennewynagrodzenia.xhtml"/>
                                         </p:panelGrid>
-                                        <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
+                                        <p:panelGrid columns="2" >
                                             <ui:include src="sub/dane_potracenia.xhtml"/>
                                             <ui:include src="sub/dane_zmiennapotracenie.xhtml"/>
                                         </p:panelGrid>
