--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_roznice.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_roznice.xhtml
@@ -49,17 +49,30 @@
                          rendered="#{bilansRozniceView.wierszeBOroznice.size() ne 0}"
                          rowKey="#{item.hashCode()}"
                          >
-                <p:column style="text-align: center;" sortBy="#{item.kwotaMa}" width="30">
+                <p:column style="text-align: center;" sortBy="#{item.kwotaMa}" width="50">
                     <f:facet name="header">
                         <h:outputText value="id"/>
                     </f:facet>
                     <h:outputText value="#{item.id}"/>
                 </p:column>
-                <p:column width="400" filterBy="#{item.konto}" filterFunction="#{bilansWprowadzanieView.filterByKonto}"  sortBy="#{item.konto}" sortFunction="#{kontoSortView.sortujKonto}">
+<!--                 tu b yla kompletnie niepotrzeban skomplikowana funkcja-->
+<!--                <p:column width="400" filterBy="#{item.konto}" filterFunction="#{bilansWprowadzanieView.filterByKonto}"sortBy="#{item.konto}" sortFunction="#{kontoSortView.sortujKonto}">
                     <f:facet name="header">
                         <h:outputText value="#{mgs.konto}"/>
                     </f:facet>
-                    <h:outputText value="#{item.konto.pelnynumer} #{item.konto.nazwapelna}"/>
+                    <h:outputText value="#{item.konto.pelnynumer}"/>
+                </p:column>-->
+                <p:column width="70" filterBy="#{item.konto.pelnynumer}" sortBy="#{item.konto.pelnynumer}" >
+                    <f:facet name="header">
+                        <h:outputText value="#{mgs.konto}"/>
+                    </f:facet>
+                    <h:outputText value="#{item.konto.pelnynumer}"/>
+                </p:column>
+                <p:column width="200" filterBy="#{item.konto.nazwapelna}" sortBy="#{item.konto.nazwapelna}" >
+                    <f:facet name="header">
+                        <h:outputText value="nazwa"/>
+                    </f:facet>
+                    <h:outputText value="#{item.konto.nazwapelna}"/>
                 </p:column>
                 <p:column styleClass="kolumnaopis" filterBy="#{item.opis}" filterMatchMode="contains" sortBy="#{item.opis}">
                     <f:facet name="header">
@@ -107,22 +120,34 @@
             <h:outputText value="wszystkie wiersze z dokumentu BO są wierszach BO" rendered="#{bilansRozniceView.wierszeDokroznice.size() eq 0}"/>
             <h:outputText value="Te wiersze z dok BO nie zgadzają się/nie ma ich w wierszach BO" rendered="#{bilansRozniceView.wierszeDokroznice.size() ne 0}"/>
              <p:dataTable value="#{bilansRozniceView.wierszeDokroznice}" var="item2"
-                         style="overflow-y: scroll; height: 300px; width: 1000px; padding: 10px; margin-top: 5px;"
+                         style="overflow-y: scroll; height: 300px; width: 1050px; padding: 10px; margin-top: 5px;"
                          styleClass="gridtablicasyntetyczne" rowIndexVar="idx"  emptyMessage="nie ma zapisów w tej grupie"
                          rendered="#{bilansRozniceView.wierszeDokroznice.size() ne 0}"
                          rowKey="#{item2.hashCode()}"
                          >
-                <p:column style="text-align: center;" sortBy="#{item2.kwotaMa}" width="30">
+                <p:column style="text-align: center;" sortBy="#{item2.kwotaMa}" width="50">
                     <f:facet name="header">
                         <h:outputText value="id"/>
                     </f:facet>
                     <h:outputText value="#{item2.id}"/>
                 </p:column>
-                 <p:column width="250" filterBy="#{item2.konto}" filterFunction="#{bilansWprowadzanieView.filterByKonto}"  sortBy="#{item2.konto}" sortFunction="#{kontoSortView.sortujKonto}">
+<!--                 <p:column width="250" filterBy="#{item2.konto}" filterFunction="#{bilansWprowadzanieView.filterByKonto}"  sortBy="#{item2.konto}" sortFunction="#{kontoSortView.sortujKonto}">
                     <f:facet name="header">
                         <h:outputText value="#{mgs.konto}"/>
                     </f:facet>
                     <h:outputText value="#{item2.konto.pelnynumer} #{item2.konto.nazwapelna}"/>
+                </p:column>-->
+                 <p:column width="70" filterBy="#{item2.konto.pelnynumer}" sortBy="#{item2.konto.pelnynumer}" >
+                    <f:facet name="header">
+                        <h:outputText value="#{mgs.konto}"/>
+                    </f:facet>
+                    <h:outputText value="#{item2.konto.pelnynumer}"/>
+                </p:column>
+                <p:column width="200" filterBy="#{item2.konto.nazwapelna}" sortBy="#{item2.konto.nazwapelna}" >
+                    <f:facet name="header">
+                        <h:outputText value="nazwa"/>
+                    </f:facet>
+                    <h:outputText value="#{item2.konto.nazwapelna}"/>
                 </p:column>
                  <p:column styleClass="kolumnaopis" filterBy="#{item2.opis}" filterMatchMode="contains" sortBy="#{item2.opis}">
                     <f:facet name="header">
