--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wprowadzanie_2.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wprowadzanie_2.xhtml
@@ -45,7 +45,7 @@
                 <h:outputText value="Generowanie bilansu likwidacyjnego na dzień #{WpisView.podatnikObiekt.dataotwarcialikwidacji}" style="color: red;"/>
             </p:outputPanel>
             <p:focus for="formbilanswprowadzanie2_wiersz"/>
-            <p:panelGrid rendered="#{bilansWprowadzanieView.nraktualnejlisty ne 1 and bilansWprowadzanieView.nraktualnejlisty ne 2}" style="height: 50px;">
+<!--            <p:panelGrid rendered="#{bilansWprowadzanieView.nraktualnejlisty ne 1 and bilansWprowadzanieView.nraktualnejlisty ne 2}" style="height: 50px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
@@ -71,9 +71,9 @@
                                         var="pka" itemLabel="#{pka.pelnynumer} #{pka.nazwapelna}" itemValue="#{pka}" autocomplete="true" scrollHeight="250"
                                         minQueryLength="1" converter="#{kontoConv}" styleClass="kontobo" maxResults="50"
                                         converterMessage="Nieudana konwersja Klient" style="margin-left: auto; margin-right: auto; width: 280px;"
-                                        ><!--to teraz powoduje blad-->
+                                        >to teraz powoduje blad
                             <f:facet name="itemtip">
-                                <!--                            działa tylko na pierwszej zakładce :(-->
+                                                            działa tylko na pierwszej zakładce :(
                                     <h:outputText value="#{pka.kontomacierzyste.pelnynumer} #{pka.kontomacierzyste.nazwapelna}"/>
                             </f:facet>
                             <p:ajax event="itemSelect" global="false" partialSubmit="true"/>
@@ -126,8 +126,9 @@
                         </p:selectOneMenu>
                     </p:column>
                 </p:row>
-            </p:panelGrid>
-            <p:panelGrid rendered="#{bilansWprowadzanieView.nraktualnejlisty eq 1 or bilansWprowadzanieView.nraktualnejlisty eq 2}"  style="height: 50px;">
+            </p:panelGrid>-->
+<!--            <p:panelGrid rendered="#{bilansWprowadzanieView.nraktualnejlisty eq 1 or bilansWprowadzanieView.nraktualnejlisty eq 2}"  style="height: 50px;">-->
+            <p:panelGrid style="height: 50px;">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
